--- a/index.html
+++ b/index.html
@@ -105,15 +105,31 @@
       <div class="info-content">
         <h2>Why Balsitoyosi?</h2>
         <p>
-          Most developers focus on code. I focus on <strong>results</strong>. I
-          build websites that don't just look pretty on a laptop, but convert
-          users on mobile devices—where 80% of your traffic lives.
+          Balsitoyosi web design agency obsessed with one thing:<strong
+            >your growth</strong
+          >. We don't just build websites; we build digital storefronts that
+          turn casual visitors into loyal customers
         </p>
         <ul class="info-list">
           <li>✓ Mobile-First Responsive Design</li>
           <li>✓ Ultra-Fast Loading Speeds</li>
           <li>✓ SEO Optimized Structure</li>
         </ul>
+      </div>
+    </section>
+
+    <section class="mission glass">
+      <div class="mission-content">
+        <span class="accent-text">// OUR GOAL</span>
+        <h2>Your Success is Our Business</h2>
+        <p>
+          The truth is, a beautiful website is useless if it doesn't bring you
+          customers. At <strong>BT Web Development Agency</strong>, our goal is
+          to bridge the gap between your business and the digital world. Whether
+          you are a small business owner or an aspiring influencer, we provide
+          the tools you need to look professional, build trust, and increase
+          your revenue.
+        </p>
       </div>
     </section>
 
