--- a/index.html
+++ b/index.html
@@ -31,17 +31,56 @@
       </p>
 
       <div class="hero-btns">
-        <a href="#" class="btn-primary">View Projects</a>
+        <a href="#work" class="btn-primary">View Projects</a>
         <a href="#" class="btn-outline">Instagram</a>
+      </div>
+    </section>
+
+    <section class="work-showcase" id="work">
+      <div class="section-header">
+        <span class="accent-text">// OUR SHOWCASE</span>
+        <h2>Recent Growth Engines</h2>
       </div>
 
       <div class="preview-container glass">
         <div class="browser-bar">
-          <span class="dot"></span><span class="dot"></span
-          ><span class="dot"></span>
+          <div class="dots">
+            <span class="dot red"></span>
+            <span class="dot yellow"></span>
+            <span class="dot green"></span>
+          </div>
+          <div class="browser-url">balsitoyosi.agency/portfolio</div>
         </div>
-        <div class="preview-content">
-          <p>PROJECT PREVIEW</p>
+
+        <div class="slider-wrapper">
+          <div class="portfolio-item active">
+            <img src="bags website.png" alt="OnyxLuxe Luxury Bags Store" />
+            <div class="project-info">
+              <h4>OnyxLuxe Retail</h4>
+              <p>Luxury E-commerce Storefront</p>
+            </div>
+          </div>
+
+          <div class="portfolio-item">
+            <img src="ticketwebsc.png" alt="OnyxLuxe Ticket Booking" />
+            <div class="project-info">
+              <h4>Event Ticketing</h4>
+              <p>Service-Based Booking UI</p>
+            </div>
+          </div>
+
+          <div class="portfolio-item">
+            <img src="book preview.png" alt="Riley Books Review" />
+            <div class="project-info">
+              <h4>Riley Reviews</h4>
+              <p>Content & Educational Platform</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="slider-nav">
+          <button id="prevBtn">←</button>
+          <button id="nextBtn">→</button>
         </div>
       </div>
     </section>
@@ -108,7 +147,7 @@
           Balsitoyosi web design agency obsessed with one thing:<strong
             >your growth</strong
           >. We don't just build websites; we build digital storefronts that
-          turn casual visitors into loyal customers
+          turn casual visitors into loyal customers.
         </p>
         <ul class="info-list">
           <li>✓ Mobile-First Responsive Design</li>
