--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
       </p>
       <div class="hero-btns">
         <a href="#work" class="btn-primary">View Projects</a>
-        <a href="https://instagram.com/balsitoyosi" class="btn-outline"
+        <a
+          href="https://www.instagram.com/luxewebdesignagency/"
+          class="btn-outline"
           >Instagram</a
         >
       </div>
@@ -160,15 +162,21 @@
           are obsessed with your growth.
         </p>
         <div class="social-grid">
-          <a href="https://wa.me/YOUR_NUMBER" class="social-item">
+          <a
+            href="https://api.whatsapp.com/send/?phone=2347065632753&text&type=phone_number&app_absent=0"
+            class="social-item"
+          >
             <i class="bx bxl-whatsapp"></i>
             WhatsApp
           </a>
-          <a href="https://instagram.com/balsitoyosi" class="social-item">
+          <a
+            href="https://www.instagram.com/luxewebdesignagency/"
+            class="social-item"
+          >
             <i class="bx bxl-instagram"></i>
             Instagram
           </a>
-          <a href="mailto:your@email.com" class="social-item">
+          <a href="mailto:balsitoyosi07@gmail.com" class="social-item">
             <i class="bx bxl-gmail"></i>
             Gmail
           </a>
@@ -182,10 +190,17 @@
 
     <footer class="footer">
       <div class="footer-icons">
-        <a href="#"><i class="bx bxl-instagram"></i></a>
-        <a href="#"><i class="bx bxl-whatsapp"></i></a>
-        <a href="#"><i class="bx bxl-github"></i></a>
-        <a href="#"><i class="bx bxl-linkedin"></i></a>
+        <a href="https://www.instagram.com/luxewebdesignagency/"
+          ><i class="bx bxl-instagram"></i
+        ></a>
+        <a
+          href="https://api.whatsapp.com/send/?phone=2347065632753&text&type=phone_number&app_absent=0"
+          ><i class="bx bxl-whatsapp"></i
+        ></a>
+        <a href="https://github.com/RILEYSIN"><i class="bx bxl-github"></i></a>
+        <a href="https://www.linkedin.com/in/ogundiyanbalsit"
+          ><i class="bx bxl-linkedin"></i
+        ></a>
       </div>
       <p>&copy; 2024 BALSITOYOSI WGA. All rights reserved.</p>
     </footer>
